--- a/cob_bringup_sim/results/hector/test2.yaml
+++ b/cob_bringup_sim/results/hector/test2.yaml
@@ -4,4 +4,5 @@
 ('Angle disparity: ', 2.6309027541264369e-05)
 ('Pose squared error', 0.0010135328750108092)
 ('Angle squared error', 2.5932856227851094e-05)
+('Pixel squared error:', 0.76593474333602385)
 
