--- a/cob_bringup_sim/results/karto/test1.yaml
+++ b/cob_bringup_sim/results/karto/test1.yaml
@@ -4,4 +4,5 @@
 ('Angle disparity: ', 1.2402533690038208e-05)
 ('Pose squared error', 0.00024294332953942347)
 ('Angle squared error', 6.9566778744096258e-06)
+('Pixel squared error:', 0.75229753417189915)
 
