--- a/cob_bringup_sim/results/cartographer/test3.yaml
+++ b/cob_bringup_sim/results/cartographer/test3.yaml
@@ -4,4 +4,5 @@
 ('Angle disparity: ', 4.7758603234358257e-05)
 ('Pose squared error', 0.0026521140282525025)
 ('Angle squared error', 2.8089934366431054e-05)
+('Pixel squared error:', 0.41721934322615434)
 
