--- a/cob_bringup_sim/results/gmapping/test1.yaml
+++ b/cob_bringup_sim/results/gmapping/test1.yaml
@@ -4,3 +4,5 @@
 ('Angle disparity: ', 4.0385661349655155e-05)
 ('Pose squared error', 0.0018224815477391537)
 ('Angle squared error', 2.0899927600560312e-05)
+('Pixel squared error:', 0.46144924515855812)
+
