Adding results for whitespace.

--- a/cob_bringup_sim/results/cartographer/test2.yaml
+++ b/cob_bringup_sim/results/cartographer/test2.yaml
@@ -5,4 +5,5 @@
 ('Pose squared error', 0.013529958506516176)
 ('Angle squared error', 0.0006030641920189274)
 ('Pixel squared error:', 0.51959510723652702)
+('Free space mapping error', 6.092401421560332, '%')
 
