--- a/cob_bringup_sim/results/hector/test3.yaml
+++ b/cob_bringup_sim/results/hector/test3.yaml
@@ -5,4 +5,5 @@
 ('Pose squared error', 0.015299129033016967)
 ('Angle squared error', 0.00080006969967008038)
 ('Pixel squared error:', 0.78693377072641202)
+('Free space mapping error', 5.248979915224022, '%')
 
