--- a/cob_bringup_sim/results/karto/test2.yaml
+++ b/cob_bringup_sim/results/karto/test2.yaml
@@ -5,4 +5,5 @@
 ('Pose squared error', 0.0035834464681009032)
 ('Angle squared error', 0.00016662899925335917)
 ('Pixel squared error:', 0.62868284515646)
+('Free space mapping error', 4.6116094093755295, '%')
 
