--- a/cob_bringup_sim/results/cartographer/test1.yaml
+++ b/cob_bringup_sim/results/cartographer/test1.yaml
@@ -5,4 +5,5 @@
 ('Pose squared error', 0.00086193096410428307)
 ('Angle squared error', 6.3385436240685398e-05)
 ('Pixel squared error:', 0.34752017300899235)
+('Free space mapping error', 4.916666666666666, '%')
 
