--- a/cob_bringup_sim/results/cartographer/test3.yaml
+++ b/cob_bringup_sim/results/cartographer/test3.yaml
@@ -5,4 +5,5 @@
 ('Pose squared error', 0.0026521140282525025)
 ('Angle squared error', 2.8089934366431054e-05)
 ('Pixel squared error:', 0.41721934322615434)
+('Free space mapping error', 5.791704630986808, '%')
 
