--- a/cob_bringup_sim/results/hector/test2.yaml
+++ b/cob_bringup_sim/results/hector/test2.yaml
@@ -5,4 +5,5 @@
 ('Pose squared error', 0.0010135328750108092)
 ('Angle squared error', 2.5932856227851094e-05)
 ('Pixel squared error:', 0.76593474333602385)
+('Free space mapping error', 4.801996953799289, '%')
 
